# docker-volume-xetfs

./: .gitignore  Dockerfile.release  README.md  build_plugin.sh  config.json
.github/workflows/: build.yml
builder/: Dockerfile.rust
rust/: Cargo.toml
rust/gitxet/: Cargo.toml
rust/volume/: Cargo.toml
rust/volume/src/: command.rs  lib.rs  log.rs  xet_driver.rs
