[package]
name = "gitxet"
version = "0.13.3"
edition = "2021"

[profile.release]
opt-level = 3
lto = true
debug = 1

[[bin]]
name = "git-xet"
path = "src/bin/gitxet.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
gitxetcore = { git = "https://github.com/xetdata/xet-core" }
clap = { version = "3.1.6", features = ["derive"] }
